# yolov5_tensorrt

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.user.OYZdPu  README.md  README_onnx_plngin.md  env.sh  main.cpp  run_yolov5.sh
build-yolov5-tensorrt-Desktop_Qt_5_13_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  yolov5tensorrt  yolov5tensorrt.cbp
model/: yolov5l.serialized  yolov5l.sim.onnx  yolov5s.onnx  yolov5s.serialized  yolov5s.sim.onnx  yolov5s_plugin.onnx  yolov5s_plugin.serialized
module/: CMakeLists.txt
module/include/: logging.h  yolov5.h
module/src/: yolov5.cpp
onnxplugin/: CMakeLists.txt
onnxplugin/include/: SiLUPlugin.h  checkMacrosPlugin.h  kernel.h
onnxplugin/src/: SiLUPlugin.cpp
plugin/: SiLU.cu  SiLUPlugin.h
src/application/yolov5/: yolo.cpp  yolo.h
src/module/: CMakeLists.txt
src/module/common/: cuda_tools.cpp  ilogger.h
src/module/core/: async_infer.h  monopoly_allocator.h  trt_tensor.h
src/module/infer/: trt_infer.cpp  trt_infer.h
src/onnxplugin/include/: SiLUPlugin.h
weights/: yolov5n.onnx  yolov5n.plugin.onnx  yolov5n.plugin.serialized  yolov5n.serialized
yolov5/: .gitignore  export.py  export.sh  infer.py  infer_tensorrt.py  int8.sh  tensorRT性能测试.md  utils.py
yolov5/int8_tool/: build_engine.py  calibrator.py  sample.py
yolov5/models/: common.py  experimental.py  yolo.py
yolov5_trt_new/: .gitignore  CMakeLists.txt  README.md  env.sh  main.cpp  run_yolov5.sh
yolov5_trt_new/src/application/: CMakeLists.txt
yolov5_trt_new/src/module/builder/: trt_builder.cpp  trt_builder.h
yolov5_trt_new/src/module/common/: cuda_tools.h  ilogger.cpp  utils.h
yolov5_trt_new/src/module/core/: trt_tensor.cpp  trt_tensor.h
yolov5_trt_new/src/module/infer/: trt_infer.h
yolov5_trt_new/src/onnxplugin/: CMakeLists.txt
yolov5_trt_new/src/onnxplugin/include/: plugin.h
yolov5_trt_new/src/onnxplugin/src/: SiLU.cu  SiLUPlugin.cpp
